--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="styles/base.css" />
-		<title>Three.js template</title>
+		<title>H is for Hiye</title>
 	</head>
 	<body>
 		<!--we don't have to create the canvas element?  -->
